feat(api): get current user borrow histories
